[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/fonts/SF Distant Galaxy.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/MainMenu/CustomizeBike.gd" type="Script" id=2]

[sub_resource type="SpatialMaterial" id=1]
resource_name = "InnerRing"
params_cull_mode = 2
roughness = 0.0764706
emission_enabled = true
emission = Color( 1, 1, 1, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 1 )

[node name="CustomizeBike" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
mat = SubResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -300.0
margin_top = 100.0
margin_right = 0.00012207
margin_bottom = -9.99988
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel"]
anchor_right = 1.0
margin_top = 20.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 3 )
text = "Bike customs"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
margin_left = 30.0
margin_top = 45.0
margin_right = 53.9999
margin_bottom = 303.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_right = 324.0
margin_bottom = 50.0
grow_horizontal = 0
custom_constants/separation = 10

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer"]
margin_top = 10.0
margin_right = 24.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 4 )
text = "R"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RedSlider" type="HSlider" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 34.0
margin_right = 234.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )
max_value = 255.0
value = 255.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 54.0
margin_right = 324.0
margin_bottom = 104.0
grow_horizontal = 0
custom_constants/separation = 10

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer2"]
margin_top = 10.0
margin_right = 23.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 4 )
text = "G"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GreenSlider" type="HSlider" parent="Panel/VBoxContainer/HBoxContainer2"]
margin_left = 33.0
margin_right = 233.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )
max_value = 255.0
value = 255.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer3" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 108.0
margin_right = 324.0
margin_bottom = 158.0
grow_horizontal = 0
custom_constants/separation = 10

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer3"]
margin_top = 10.0
margin_right = 23.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 4 )
text = "B"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlueSlider" type="HSlider" parent="Panel/VBoxContainer/HBoxContainer3"]
margin_left = 33.0
margin_right = 233.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )
max_value = 255.0
value = 255.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="value_changed" from="Panel/VBoxContainer/HBoxContainer/RedSlider" to="." method="_on_RedSlider_value_changed"]
[connection signal="value_changed" from="Panel/VBoxContainer/HBoxContainer2/GreenSlider" to="." method="_on_GreenSlider_value_changed"]
[connection signal="value_changed" from="Panel/VBoxContainer/HBoxContainer3/BlueSlider" to="." method="_on_BlueSlider_value_changed"]
